Added Delete Individual and Delete All Functionality

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
           </div>
         </li> -->
       </ul>
+      <button type="button" class="btn__delete--all">
+        Delete All Workouts
+      </button>
 
       <p class="copyright">
         &copy; Copyright by
